# lax

./: .gitignore  CMakeLists.txt  Makefile  README.md  lang  main.cpp
examples/: conditions.lax  example.lax  expressions.lax  functions.lax  inclusion.lax  loops.lax  variables.lax
include/: Lax.h
include/ast/: AST.h  ASTFwdDecl.h  ASTIncludes.h  ASTNode.h  ASTVisitor.h  AssignNode.h  BinOpNode.h  BlockNode.h  CallNode.h  ConditionalNode.h  DeclNode.h  ExprNode.h  FunNode.h  Id.h  LiteralNode.h  LogicalNode.h  NodeTypes.h  RelationalNode.h  ReturnNode.h  SeqNode.h  StmtExpressionNode.h  StmtNode.h  StmtPrintNode.h  UnaryNode.h
include/ast/nodes/: ASTNode.h  AssignNode.h  BinOpNode.h  BlockNode.h  CallNode.h  ConditionalNode.h  DeclNode.h  ExprNode.h  ForLoopNode.h  ForNode.h  FunNode.h  IdNode.h  LiteralNode.h  LogicalNode.h  RelationalNode.h  ReturnNode.h  SeqNode.h  StmtExpressionNode.h  StmtNode.h  UnaryNode.h  WhileLoopNode.h  WhileNode.h
include/common/: AST.h  Chunk.h  CompileTimeException.h  Debug.h  Exception.h  Memory.h  StringTable.h  UnsupportedOperationException.h  Value.h  ValueType.h
include/compiler/: Compiler.h
include/interpreter/: Callframe.h  Interpreter.h  Return.h  RuntimeError.h
include/lexer/: LexError.h  Lexer.h  Memento.h
include/natives/: NativeFunctions.h
include/objects/: Callable.h  ObjClosure.h  ObjFunction.h  ObjNative.h  ObjString.h  ObjUpvalue.h  Object.h  Variable.h
include/parser/: ParseError.h  Parser.h
include/semantic/: Definer.h  HoistingPass.h  Resolver.h  SemanticAnalyzer.h  SemanticError.h  TopLevelDefiner.h  TopLevelResolver.h  TopLevelSemanticAnalyzer.h  TypeChecker.h
include/symbols/: BuiltInSymbol.h  Env.h  FunSymbol.h  Scope.h  Symbol.h  SymbolTable.h  VarSymbol.h
include/tokens/: Token.h  TokenType.h
include/utils/: Logger.h
include/values/: FunctionType.h  LaxType.h  ObjectType.h  PrimitiveType.h  Value.h  ValueArray.h
include/vm/: Table.h  VM.h
src/: Lax.cpp  ast.cpp  ast.h  interpreter.cpp  interpreter.h  lax.cpp  lax.h  lexer.cpp  lexer.h  main.cpp  nodevisitor.h  parser.cpp  parser.h  token.cpp  token.h
src/ast/: AST.cpp  AssignNode.cpp  BinOpNode.cpp  BlockNode.cpp  CallNode.cpp  ConditionalNode.cpp  DeclNode.cpp  ExprNode.cpp  FunNode.cpp  Id.cpp  LiteralNode.cpp  LogicalNode.cpp  RelationalNode.cpp  ReturnNode.cpp  SeqNode.cpp  StmtExpressionNode.cpp  StmtNode.cpp  StmtPrintNode.cpp  UnaryNode.cpp  assignnode.cpp  assignnode.h  astnode.h  binopnode.cpp  binopnode.h  blocknode.cpp  blocknode.h  callnode.cpp  callnode.h  conditionalnode.cpp  conditionalnode.h  constantnode.cpp  constantnode.h  declnode.cpp  declnode.h  exprnode.cpp  exprnode.h  funnode.cpp  funnode.h  id.cpp  id.h  (+20 more)
src/ast/nodes/: ASTNode.cpp  AssignNode.cpp  BinOpNode.cpp  BlockNode.cpp  CallNode.cpp  ConditionalNode.cpp  DeclNode.cpp  ExprNode.cpp  ForLoopNode.cpp  ForNode.cpp  FunNode.cpp  IdNode.cpp  LiteralNode.cpp  LogicalNode.cpp  RelationalNode.cpp  ReturnNode.cpp  SeqNode.cpp  StmtExpressionNode.cpp  StmtNode.cpp  UnaryNode.cpp  WhileLoopNode.cpp  WhileNode.cpp
src/common/: Chunk.cpp  CompileTimeException.cpp  Debug.cpp  Exception.cpp  Memory.cpp  StringTable.cpp  Value.cpp  ValueType.cpp  compiletimeexception.cpp  compiletimeexception.h  exception.cpp  exception.h  value.h  valuetype.cpp  valuetype.h
src/compiler/: Compiler.cpp
src/interpreter/: Callframe.cpp  Interpreter.cpp  Return.cpp  RuntimeError.cpp  astvisitor.h  callframe.cpp  callframe.h  exprvisitor.h  interpreter.cpp  interpreter.h  return.cpp  return.h  runtimeerror.cpp  runtimeerror.h  stmtvisitor.h
src/lexer/: LexError.cpp  Lexer.cpp  Memento.cpp  lexer.cpp  lexer.h  lexerror.cpp  lexerror.h  memento.cpp  memento.h  op.h  token.cpp  token.h  tokentype.h  word.cpp  word.h
src/natives/: NativeFunctions.cpp
src/objects/: ObjClosure.cpp  ObjFunction.cpp  ObjNative.cpp  ObjString.cpp  ObjUpvalue.cpp  Object.cpp  Variable.cpp  callable.h  objclosure.cpp  objclosure.h  object.cpp  object.h  objfunction.cpp  objfunction.h  objstring.cpp  objstring.h  variable.cpp  variable.h
src/parser/: ParseError.cpp  Parser.cpp  parseerror.cpp  parseerror.h  parser.cpp  parser.h
src/semantic/: Definer.cpp  HoistingPass.cpp  Resolver.cpp  SemanticAnalyzer.cpp  SemanticError.cpp  TopLevelDefiner.cpp  TopLevelResolver.cpp  TopLevelSemanticAnalyzer.cpp  TypeChecker.cpp  semanticanalyzer.cpp  semanticanalyzer.h  semanticerror.cpp  semanticerror.h
src/symbols/: BuiltInSymbol.cpp  Env.cpp  FunSymbol.cpp  Scope.cpp  Symbol.cpp  SymbolTable.cpp  VarSymbol.cpp  env.cpp  env.h  funsymbol.cpp  funsymbol.h  symbol.cpp  symbol.h  symboltable.cpp  symboltable.h  type.cpp  type.h  varsymbol.cpp  varsymbol.h
src/tokens/: Token.cpp  num.cpp  num.h  object.cpp  object.h  op.cpp  token.cpp  token.h  tokentype.h  type.cpp  type.h  word.cpp  word.h
src/utils/: Logger.cpp  logger.cpp  logger.h
src/values/: FunctionType.cpp  LaxType.cpp  ObjectType.cpp  PrimitiveType.cpp  Value.cpp  ValueArray.cpp
src/vm/: Table.cpp  VM.cpp
